--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,7 @@ jsonwebtoken = { version = "9.2", features = ["use_pem"] }
 serde = { version = "1.0" }
 reqwest = { version = "0.11", features = ["json"] }
 
-rocket = { version = "0.5.0", features = ["json"], optional = true }
+rocket = { git = "https://github.com/KinanBab/Rocket.git", branch = "main", features = ["json"], optional = true }
 dotenvy = { version = "0.15.7", optional = true }
 serde_json = { version = "1.0", optional = true }
 
